--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.89.0",
+    "groq-sdk": "^0.37.0",
+    "lucide-react": "^0.560.0",
     "next": "16.0.8",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/node": "25.0.1",
+    "@types/react": "19.2.7",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
-    "tailwindcss": "^4"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.10"
   }
 }
